--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,14 +12,14 @@
 }
 
 
-.heder-container .abc {
+ .abc {
     display: flex;
     margin-left: 180px;
 }
 header {
     position: fixed;
     top: 0;
-
+    z-index: 999;
 }
 
 header nav ul {
@@ -52,15 +52,57 @@ header nav ul li a:hover {
 }
 
 #hero {
-    height: 100%;
-    width: 100%;
-
-}
-
-#hero .container {
     background-image: url(../img/burger\ img.jpg);
     background-position: top center;
     background-size: 100% auto;
     background-repeat: no-repeat;
     height: 100vh;
+    width: 100%;
+    position: relative;
+    
+
+}
+
+#hero::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+}
+
+.heder-detail h2 {
+    font-size: 7.5rem;
+    color: white;
+    padding-top: 12rem;
+    text-align: center;
+    font-weight: bold;
+    max-width: 70%;
+    margin: 0 auto;
+    font-family: "lilita-one";
+}
+
+.heder-detail p {
+    color: white;
+    font-size: 1.5rem;
+    text-align: center;
+    padding-top: 1rem;
+    font-weight: bold;
+}
+
+.heder-detail p span {
+    color: #f7be27;
+    font-size: 2rem;
+    font-weight: bold;
+    font-family: "osward";
+}
+
+
+/* *********about******************* */
+
+#about {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.img {
+    display: flex;
 }
