--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ header nav ul li a:hover {
     font-weight: bold;
     max-width: 70%;
     margin: 0 auto;
-    font-family: "lilita-one";
+    font-family: "Lilita One";
 }
 
 .heder-detail p {
@@ -92,7 +92,8 @@ header nav ul li a:hover {
     color: #f7be27;
     font-size: 2rem;
     font-weight: bold;
-    font-family: "osward";
+    font-family:"Oswald" ;
+
 }
 
 
@@ -105,4 +106,43 @@ header nav ul li a:hover {
 
 .img {
     display: flex;
+    height: 600px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
+
+.img-data h2 {
+    color: #642f21;
+    padding-bottom: 25px;
+    font-size: 4.4rem;
+    font-weight: 500;
+    padding-left: 30px;
+    font-family:"Oswald" ;
+
+}
+
+.img-data p{
+    color:  #757575;
+    font-size: 1.15rem;
+    padding-left: 30px;
+}
+
+.foods {
+    display: flex;
+    justify-content: space-between;
+padding-left: 35px;
+}
+
+.foods img {
+    height: 120px;
+    padding: 1rem;
+}
+
+.foods h2 {
+    font-size: 1.4rem;
+    color: black;
+    font-family:"Oswald" ;
+    text-align: center;
+
+}
+    
