--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,6 +176,8 @@ padding-left: 35px;
     /* position: relative; */
     background-image: url(../img/pb-2-1.jpg);
     height: 360px;
+    border-radius: 14px;
+
 }
 
 .chees-fries-data h2 {
@@ -223,6 +225,7 @@ padding-left: 35px;
 .burger-back-data {
     position: relative;
     background-image: url(../img/pb-2-2.jpg);
+    border-radius: 14px;
     height: 360px;
 }
 
@@ -262,4 +265,27 @@ padding-left: 35px;
     max-width: 43rem;
     margin: 0 auto;
     padding: 1rem 0 3rem;
+}
+
+.menu-data {
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu-detail {
+    height: auto;
+    width: 100%;
+    border: 1px solid #e5e5e5;
+    margin-right: 10px;
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.menu-detail img {
+    width: 100%;
+}
+ 
+.menu-detail i {
+    color: #f7be27;
+    
 }
