--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
     width: 100%;
     display: flex;
     margin: 0 auto;
-    margin-top: 35px;
+    padding-top: 10px;
 }
 
 
@@ -27,6 +27,9 @@ header {
     position: fixed;
     top: 0;
     z-index: 999;
+    background-color: white;
+    width: 100%;
+    height: 100px;
 }
 
 header nav ul {
@@ -37,7 +40,7 @@ header nav ul {
 header nav ul li a {
     font-family: "Oswald";
     text-decoration: none;
-    color: white;
+    color: black;
     font-size: 20px;
     padding: 0 10px;
 
@@ -48,7 +51,7 @@ header nav ul li a:hover {
 }
 
 .heder-container img {
-    height: 100px;
+    height: 80px;
     max-width: 24%;
 }
 
@@ -171,7 +174,6 @@ header nav ul li a:hover {
     /* position: absolute; */
 }
 
-.burger-back {}
 
 .chees-fries-data {
     /* position: relative; */
@@ -261,7 +263,8 @@ header nav ul li a:hover {
     text-transform: uppercase;
 
 }
- .abc {
+
+.sub-title {
     color: #888;
     font-size: 1.5rem;
     text-align: center;
@@ -287,21 +290,43 @@ header nav ul li a:hover {
 }
 
 .money-data {
-    padding: 0 20px 15px 14px;
+    padding: 0 14px 15px 14px;
 }
 
-.imges-data img{
+.imges-data img {
     width: 100%;
     border-radius: 6px 6px 0 0;
+    position: relative;
+    overflow: hidden;
 }
 
-.menu-detail img:hover {
-    transform: scale(1);
+.imges-data {
+    position: relative;
+    overflow: hidden;
+}
+.imges-data span {
+    position: absolute;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    background-color: rgba(10, 10, 10, .4);
+    margin-left: 10px;
+    margin-top: 10px;
+    padding: 5px;
+    color: white;
+    border-radius: 5px;
+}
+
+.imges-data img:hover {
+    transform: scale(1.2);
     transition: all 1s;
+    top: 0;
+    bottom: 0;
 }
 
 .menu-star {
     padding: 10px;
+    
 }
 
 .menu-star i {
@@ -310,11 +335,16 @@ header nav ul li a:hover {
 }
 
 
-.menu-star a {
+.menu-star a  {
     color: #aaa;
     font-weight: 500;
     float: right;
     font-size: 20px;
+}
+
+.menu-star a:hover {
+    color: red;
+    
 }
 
 .menu-star h3 {
@@ -325,17 +355,17 @@ header nav ul li a:hover {
     padding: 10px 0 12px 0;
 }
 
-.menu-star .cilli {
+.money-data .cilli {
     color: #757575;
     font-size: 16px;
 }
 
-.menu-star .money {
+.money-data .money {
     height: 35px;
-    width: 27%;
+    width: 28%;
     background-color: #642f21;
     border-radius: 7px;
-    font-size: 20px;
+    font-size: 19px;
     text-align: center;
     color: #f7be27;
     font-weight: bold;
