--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,6 +326,7 @@ header nav ul li a:hover {
 
 .menu-star {
     padding: 10px;
+    display: flex;
     
 }
 
@@ -335,14 +336,15 @@ header nav ul li a:hover {
 }
 
 
-.menu-star a  {
+.menu-star a  i{
     color: #aaa;
     font-weight: 500;
     float: right;
     font-size: 20px;
+    padding-left: 8rem;
 }
 
-.menu-star a:hover {
+.menu-star a i:hover {
     color: red;
     
 }
@@ -369,4 +371,19 @@ header nav ul li a:hover {
     text-align: center;
     color: #f7be27;
     font-weight: bold;
+}
+
+/* *****the-county*********** */
+
+#the-county {
+    background-image: url(../img/backimg.png);
+    margin-top: 8rem;
+    background-position: top center;
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
+    position: relative;
+
+
 }
