--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,6 +437,7 @@ header nav ul li a:hover {
 
 .the-county-data {
     display: flex;
+    align-items: center;
 }
 
 .burgers-img img {
@@ -474,7 +475,7 @@ text-transform: uppercase;
 }
 
 .circle-data h2 {
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 
 
@@ -488,11 +489,23 @@ text-transform: uppercase;
     background-color: transparent;
     border-radius: 6px;
     padding: 20px;
-    height: 100px;
-    width: 140px;
+    height: 200px;
+    width: 170px;
+    margin-bottom: 20px;
+    margin-right: 30px;
+    
+}
+.box-burger:hover {
+    background-color: transparent;
 }
 
 .box-burger img {
-    height: 70px;
-    width: 70px;
+    height: 100px;
+}
+
+.box-burger h2 {
+    color: white;
+    font-size: 1rem;
+    text-align: center;
+    padding-top: 1rem;
 }
