--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,14 +489,11 @@ text-transform: uppercase;
     background-color: transparent;
     border-radius: 6px;
     padding: 20px;
-    height: 200px;
-    width: 170px;
     margin-bottom: 20px;
-    margin-right: 30px;
     
 }
 .box-burger:hover {
-    background-color: transparent;
+    background-color: #f7be27;
 }
 
 .box-burger img {
